# T113_LVGL

./: CMakeLists.txt  README.md  build.sh
app/: CMakeLists.txt
app1/: main.c
app2/: CMakeLists.txt  page_test.c  page_test.h
app2/res/: res_conf.h
app2/res/font/: font_conf.h
app3/: CMakeLists.txt  main.c  page_test.c
app3/res/: res_conf.h
app4/: CMakeLists.txt  page_conf.h  page_test.c
app5/: CMakeLists.txt  favicon .c  main.c  page_conf.h
app6/: lv_load.c  lv_load.h  page1.c  page_test.c  test_font.c
app7/: CMakeLists.txt  main.c  pageMenu.c  pageMusic.c  pageStart.c  pageWifi.c  page_clock.c  page_conf.h  page_setting.c  pagenotebook.c  test_log.c  ui_msg.c  ui_msg.h
app7/file/: file.h
app7/file/SQL/: event_log.c  event_log.h  ram_log.c  ram_log.h  system_log.c  system_log.h  text_log.c  text_log.h
app7/file/file/: file._atomic.h  file_atomic.c
app7/music/: audio_player_async.c  audio_player_async.h  音乐播放器.md
app7/net/: http_manager.c  http_manager.h
app7/page_information/: page_information.c
app7/res/: res_conf.h
app7/res/image/: image_conf.h
app7/test/: my_msgbox.c  page2.c
app7/wifi/: wpa_manager.c  wpa_manager.h
component/net/: http_manager.c  http_manager.h
note/: 命令.md  笔记本设计.md
platform/t113/src/porting/: lv_conf.h
platform/x86linux/src/porting/: lv_drv_conf.h
